Removed technical debt